# cheatbot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cheatbot/: __init__.py  __main__.py  client.py  services.py
cheatbot/models/: __init__.py  base.py  common.py  fields.py  profile.py  subscription.py  task.py  task_creation.py
docs/: SERVICES.md
tests/: test_client.py
tests/fixtures/: public_openapi.json  services.json
tests/fixtures/create_task/: default.json  reactions.json  start_bot.json  views.json  voting.json
